--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+body,
+html,
+#root,
+.app,
+.container {
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  font-size: 20px;
+  color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #183b83;
 }
 
-.App-link {
-  color: #61dafb;
+.inputForm {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 400px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputField {
+  padding-top: 16px;
+}
+
+.submitButton {
+  padding-top: 16px;
+}
+
+.input {
+  box-sizing: border-box;
+  outline: none;
+  border: solid 2px #1189de;
+  border-radius: 5px;
+  color: #292929;
+  width: 100%;
+  padding: 12px;
+  font-size: 14px;
+  background: rgba(255, 255, 255, 1);
+}
+
+.labelName {
+  color: darkgoldenrod;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: monospace;
+}
+
+.btn {
+  width: 100%;
+  min-width: 280px;
+  color: #585858;
+  padding: 12px;
+  font-size: 14px;
+  font-weight: bold;
+  border: solid 2px #1189de;
+  border-radius: 5px;
+  background: rgb(3, 231, 72);
+  cursor: pointer;
+}
+.btndisabled {
+  width: 100%;
+  min-width: 280px;
+  color: #585858;
+  padding: 12px;
+  font-size: 14px;
+  font-weight: bold;
+  border: solid 2px #131414;
+  border-radius: 5px;
+  background: rgb(118, 117, 119);
 }
